Docs site ready to populate

--- a/packages/docs/src/pages/about.mdx
+++ b/packages/docs/src/pages/about.mdx
@@ -1,17 +1,16 @@
 import Layout from "../components/layout";
-import { Hero } from "@nice-digital/nds-hero";
+import SEO from "../components/seo";
+import { Link } from "gatsby";
+
+<SEO title="About" />
 
 # About the design system
 
 This is some markdown.
 
----
+- List item
+- Another list item
 
-<Hero title="Component" intro="This is a React component" />
-
----
-
-- Here is a list
-- Here is another item
+<Link to="/">Back to home</Link>
 
 export default Layout;
