Use frontmatter paths

--- a/packages/docs/src/content/about/getting-started.mdx
+++ b/packages/docs/src/content/about/getting-started.mdx
@@ -1,6 +1,8 @@
 ---
 title: Getting started
 description: Guides to getting started using NICE Design System
+type: about
+path: /about/getting-started
 headerCTA:
   href: https://codepen.io/pen?template=mKvYJO
   text: Try it on CodePen
