--- a/packages/docs/src/content/about/index.mdx
+++ b/packages/docs/src/content/about/index.mdx
@@ -1,9 +1,11 @@
 ---
 title: About the NICE Design System
 description: NICE Design System is a set of reusable patterns, documentation and guidelines for rapid product development.
+type: about
+path: /about
 ---
 
-Its goal is to create a consistent, acccessible digital experience across all of NICE's services.
+Its goal is to create a consistent, accessible digital experience across all of NICE's services.
 
 It's a source for creating beautiful, consistent experiences across NICE's digital services. It's aimed at developers, designers and content editors and consists of:
 
