--- a/packages/docs/src/content/components/card/index.mdx
+++ b/packages/docs/src/content/components/card/index.mdx
@@ -2,6 +2,7 @@
 title: Card
 description: A flexible component for displaying an item like news or guidance within a list
 type: components
+path: /components/card
 ---
 
 ## Why?
