--- a/packages/docs/src/content/components/stacked-navigation/index.mdx
+++ b/packages/docs/src/content/components/stacked-navigation/index.mdx
@@ -2,6 +2,7 @@
 title: Stacked navigation
 description: Navigation to support sub-pages within a section
 type: components
+path: /components/stacked-navigation
 ---
 
 ## Why?
