--- a/packages/docs/src/content/components/tabs/index.mdx
+++ b/packages/docs/src/content/components/tabs/index.mdx
@@ -2,6 +2,7 @@
 title: Tabs
 description: Content is separated into different panes, with only one pane viewable at a time
 type: components
+path: /components/tabs
 ---
 
 ## Why?
