--- a/packages/docs/src/content/foundations/helpers/index.mdx
+++ b/packages/docs/src/content/foundations/helpers/index.mdx
@@ -2,6 +2,7 @@
 title: Helpers
 description: Useful helper classes for common tasks
 type: foundations
+path: /foundations/helpers
 ---
 
 ## Floats
