--- a/packages/docs/src/content/foundations/iconography/index.mdx
+++ b/packages/docs/src/content/foundations/iconography/index.mdx
@@ -2,6 +2,7 @@
 title: Iconography
 description: Icons, their usage and guidance for creating new custom icons
 type: foundations
+path: /foundations/iconography
 ---
 
 ## Introduction
