--- a/packages/docs/src/content/foundations/layout/index.mdx
+++ b/packages/docs/src/content/foundations/layout/index.mdx
@@ -2,6 +2,7 @@
 title: Grid & layout
 description: Use containers, grids and whitespace to build a structure and hierarchy on the page.
 type: foundations
+path: /foundations/grid-and-layout
 ---
 
 ## Usage
