--- a/packages/docs/src/content/foundations/spacing/index.mdx
+++ b/packages/docs/src/content/foundations/spacing/index.mdx
@@ -2,6 +2,7 @@
 title: Spacing
 description: Spacing between elements and vertical rhythm
 type: foundations
+path: /foundations/spacing
 ---
 
 ## Introduction
