--- a/packages/docs/src/content/foundations/visibility/index.mdx
+++ b/packages/docs/src/content/foundations/visibility/index.mdx
@@ -2,6 +2,7 @@
 title: Visibility
 description: Showing and hiding elements across breakpoints, for print, device orientations and screen readers
 type: foundations
+path: /foundations/visibility
 ---
 
 ## Showing & hiding
