--- a/packages/docs/src/content/about/roadmap.mdx
+++ b/packages/docs/src/content/about/roadmap.mdx
@@ -1,6 +1,8 @@
 ---
 title: Roadmap
 description: Where we're taking the product
+type: about
+path: /about/roadmap
 ---
 
 We've split our roadmap into short, medium and long term and by components, content, code and build. This is subject to change and will be updated on a regular basis.
