--- a/packages/docs/src/content/components/action-banner/index.mdx
+++ b/packages/docs/src/content/components/action-banner/index.mdx
@@ -2,14 +2,19 @@
 title: Action banner
 description: Banner for highlighting, and giving context to, a call-to-action
 type: components
+path: /components/action-banner
 ---
+
 Import { ActionBanner } from "@nice-digital/nds-action-banner"
 
 ## Why?
+
 Some calls-to-action are higher priority than others. An action banner gives a way of highlighting these CTAs. They can also be used to break up a page layout and give visual interest.
 
 ## Usage
+
 Action banners fill the available horizontal space and have their own built-in container. They usually live outside of any `.container` to fill the screen width. The action should be a button: choose the right type of button (primary, secondary etc) to match the CTA importance.
+
 - Use sparingly
 - use a maximum of 1 per page
 - use outside of `.container`
@@ -21,28 +26,31 @@ Action banners fill the available horizontal space and have their own built-in c
 
 The default variant is strong and grabs users' attention. Use sparingly for important calls of action on a page that need extra context. Usually use with a `.btn.btn--inverse` button because of the dark background but can be used with a `.btn.btn--cta` for even more impact.
 
-``` html
+```html
 <section class="action-banner" data-no-inpagenav>
-    <div class="action-banner__container">
-        <div class="action-banner__inner">
-            <div class="action-banner__text">
-                <h2 class="action-banner__title">
-                    Register as a stakeholder
-                </h2>
-                <p class="action-banner__intro">
-                    Stakeholders can comment on draft guidance and participate in workshops and events.
-                </p>
-            </div>
-            <div class="action-banner__actions">
-                <a href="https://www.nice.org.uk/get-involved/stakeholder-registration" class="btn btn--inverse">
-                    Register
-                </a>
-            </div>
-        </div>
-    </div>
+	<div class="action-banner__container">
+		<div class="action-banner__inner">
+			<div class="action-banner__text">
+				<h2 class="action-banner__title">
+					Register as a stakeholder
+				</h2>
+				<p class="action-banner__intro">
+					Stakeholders can comment on draft guidance and participate in
+					workshops and events.
+				</p>
+			</div>
+			<div class="action-banner__actions">
+				<a
+					href="https://www.nice.org.uk/get-involved/stakeholder-registration"
+					class="btn btn--inverse"
+				>
+					Register
+				</a>
+			</div>
+		</div>
+	</div>
 </section>
 ```
-
 
 ### Subtle
 
@@ -69,4 +77,3 @@ Use the subtle variant when you need a call to action with context, but don't wa
     </div>
 </section>
 ```
-
