--- a/packages/docs/src/content/components/in-page-nav/index.mdx
+++ b/packages/docs/src/content/components/in-page-nav/index.mdx
@@ -2,6 +2,7 @@
 title: In page nav
 description: Allows users to navigate to specific sections, within long pages of content, across any screen size.
 type: components
+path: /components/in-page-nav
 ---
 
 ## Why?
