--- a/packages/docs/src/content/components/maintain-ratio/index.mdx
+++ b/packages/docs/src/content/components/maintain-ratio/index.mdx
@@ -2,6 +2,7 @@
 title: Maintain ratio
 description: Embed media and maintain an aspect ratio across devices
 type: components
+path: /components/maintain-ratio
 ---
 
 ## Why?
