--- a/packages/docs/src/content/components/page-header/index.mdx
+++ b/packages/docs/src/content/components/page-header/index.mdx
@@ -2,6 +2,7 @@
 title: Page header
 description: Main heading and intro copy to introduce a page
 type: components
+path: /components/page-header
 ---
 
 ## Why?
