--- a/packages/docs/src/content/components/phase-banner/index.mdx
+++ b/packages/docs/src/content/components/phase-banner/index.mdx
@@ -2,6 +2,7 @@
 title: Phase banner
 description: Alpha and beta beta banners clearly identify non-live services
 type: components
+path: /components/phase-banner
 ---
 
 ## Why?
