--- a/packages/docs/src/content/foundations/links/index.mdx
+++ b/packages/docs/src/content/foundations/links/index.mdx
@@ -2,6 +2,7 @@
 title: Links
 description: Links and hover/active/visited/focus states
 type: foundations
+path: /foundations/links
 ---
 
 Their primary usage is as a navigational element. They can also be used as a replacement for a button in space constrained situations (tables, forms, panels) or when you need less visual prominence to perform an action.
