--- a/packages/docs/src/content/foundations/responsive/index.mdx
+++ b/packages/docs/src/content/foundations/responsive/index.mdx
@@ -2,6 +2,7 @@
 title: Responsive
 description: Guidance for building mobile-first responsive web applications
 type: foundations
+path: /foundations/responsive
 ---
 
 ## Introduction
