--- a/packages/docs/src/content/foundations/typography/index.mdx
+++ b/packages/docs/src/content/foundations/typography/index.mdx
@@ -2,6 +2,7 @@
 title: Typography
 description: Headings, paragraphs, featured text, quotations, lists, links
 type: foundations
+path: /foundations/typography
 ---
 
 ## Basics
