Component overview pages

--- a/packages/docs/src/content/components/action-banner/index.mdx
+++ b/packages/docs/src/content/components/action-banner/index.mdx
@@ -1,8 +1,9 @@
 ---
 title: Action banner
 description: Banner for highlighting, and giving context to, a call-to-action
-type: components
+section: components
 path: /components/action-banner
+template: component
 ---
 
 Import { ActionBanner } from "@nice-digital/nds-action-banner"
