--- a/packages/docs/src/content/components/breadcrumbs/index.mdx
+++ b/packages/docs/src/content/components/breadcrumbs/index.mdx
@@ -1,7 +1,8 @@
 ---
 title: Breadcrumbs
 description: A breadcrumb trail is a secondary navigation, that displays as a series of links, situated below the header.
-type: components
+section: components
+template: component
 path: /components/breadcrumbs
 ---
 
