--- a/packages/docs/src/content/components/card/index.mdx
+++ b/packages/docs/src/content/components/card/index.mdx
@@ -1,7 +1,8 @@
 ---
 title: Card
 description: A flexible component for displaying an item like news or guidance within a list
-type: components
+section: components
+template: component
 path: /components/card
 ---
 
