--- a/packages/docs/src/content/components/hero/index.mdx
+++ b/packages/docs/src/content/components/hero/index.mdx
@@ -1,7 +1,8 @@
 ---
 title: Hero
 description: Introduce a site or sub-site with impact
-type: components
+section: components
+template: component
 path: /components/hero
 ---
 
