--- a/packages/docs/src/content/components/in-page-nav/index.mdx
+++ b/packages/docs/src/content/components/in-page-nav/index.mdx
@@ -1,7 +1,8 @@
 ---
 title: In page nav
 description: Allows users to navigate to specific sections, within long pages of content, across any screen size.
-type: components
+section: components
+template: component
 path: /components/in-page-nav
 ---
 
