--- a/packages/docs/src/content/components/maintain-ratio/index.mdx
+++ b/packages/docs/src/content/components/maintain-ratio/index.mdx
@@ -1,7 +1,8 @@
 ---
 title: Maintain ratio
 description: Embed media and maintain an aspect ratio across devices
-type: components
+section: components
+template: component
 path: /components/maintain-ratio
 ---
 
