--- a/packages/docs/src/content/components/page-header/index.mdx
+++ b/packages/docs/src/content/components/page-header/index.mdx
@@ -1,7 +1,8 @@
 ---
 title: Page header
 description: Main heading and intro copy to introduce a page
-type: components
+section: components
+template: component
 path: /components/page-header
 ---
 
