--- a/packages/docs/src/content/components/panel/index.mdx
+++ b/packages/docs/src/content/components/panel/index.mdx
@@ -1,7 +1,8 @@
 ---
 title: Panel
 description: Blocks to highlight or separate content
-type: components
+section: components
+template: component
 path: /components/panel
 ---
 
