--- a/packages/docs/src/content/components/phase-banner/index.mdx
+++ b/packages/docs/src/content/components/phase-banner/index.mdx
@@ -1,7 +1,8 @@
 ---
 title: Phase banner
 description: Alpha and beta beta banners clearly identify non-live services
-type: components
+section: components
+template: component
 path: /components/phase-banner
 ---
 
