--- a/packages/docs/src/content/components/tag/index.mdx
+++ b/packages/docs/src/content/components/tag/index.mdx
@@ -1,7 +1,8 @@
 ---
 title: Tag
 description: Tag component used for labelling items in a list
-type: components
+section: components
+template: component
 path: /components/tag
 ---
 
