--- a/packages/docs/src/content/foundations/buttons/index.mdx
+++ b/packages/docs/src/content/foundations/buttons/index.mdx
@@ -1,7 +1,8 @@
 ---
 title: Buttons
 description: Button of different types, colours and sizes and combination of buttons
-type: foundations
+section: foundations
+template: component
 path: /foundations/buttons
 ---
 
