--- a/packages/docs/src/content/foundations/colour/index.mdx
+++ b/packages/docs/src/content/foundations/colour/index.mdx
@@ -1,7 +1,8 @@
 ---
 title: Colour
 description: Colour palettes and usage, contrast guidelines and SASS variables
-type: foundations
+section: foundations
+template: component
 path: /foundations/colour
 ---
 
