--- a/packages/docs/src/content/foundations/helpers/index.mdx
+++ b/packages/docs/src/content/foundations/helpers/index.mdx
@@ -1,7 +1,8 @@
 ---
 title: Helpers
 description: Useful helper classes for common tasks
-type: foundations
+section: foundations
+template: component
 path: /foundations/helpers
 ---
 
