--- a/packages/docs/src/content/foundations/links/index.mdx
+++ b/packages/docs/src/content/foundations/links/index.mdx
@@ -1,7 +1,8 @@
 ---
 title: Links
 description: Links and hover/active/visited/focus states
-type: foundations
+section: foundations
+template: component
 path: /foundations/links
 ---
 
