--- a/packages/docs/src/content/foundations/responsive/index.mdx
+++ b/packages/docs/src/content/foundations/responsive/index.mdx
@@ -1,7 +1,8 @@
 ---
 title: Responsive
 description: Guidance for building mobile-first responsive web applications
-type: foundations
+section: foundations
+template: component
 path: /foundations/responsive
 ---
 
