--- a/packages/docs/src/content/foundations/spacing/index.mdx
+++ b/packages/docs/src/content/foundations/spacing/index.mdx
@@ -1,7 +1,8 @@
 ---
 title: Spacing
 description: Spacing between elements and vertical rhythm
-type: foundations
+section: foundations
+template: component
 path: /foundations/spacing
 ---
 
