--- a/packages/docs/src/content/foundations/visibility/index.mdx
+++ b/packages/docs/src/content/foundations/visibility/index.mdx
@@ -1,7 +1,8 @@
 ---
 title: Visibility
 description: Showing and hiding elements across breakpoints, for print, device orientations and screen readers
-type: foundations
+section: foundations
+template: component
 path: /foundations/visibility
 ---
 
