--- a/packages/docs/src/content/about/index.mdx
+++ b/packages/docs/src/content/about/index.mdx
@@ -2,7 +2,7 @@
 title: About the NICE Design System
 description: NICE Design System is a set of reusable patterns, documentation and guidelines for rapid product development.
 type: about
-path: /about/
+path: /about
 ---
 
 Its goal is to create a consistent, accessible digital experience across all of NICE's services.
