--- a/packages/docs/src/content/components/stacked-navigation/index.mdx
+++ b/packages/docs/src/content/components/stacked-navigation/index.mdx
@@ -1,7 +1,8 @@
 ---
 title: Stacked navigation
 description: Navigation to support sub-pages within a section
-type: components
+section: components
+template: component
 path: /components/stacked-navigation
 ---
 
