--- a/packages/docs/src/content/components/tabs/index.mdx
+++ b/packages/docs/src/content/components/tabs/index.mdx
@@ -1,7 +1,8 @@
 ---
 title: Tabs
 description: Content is separated into different panes, with only one pane viewable at a time
-type: components
+section: components
+template: component
 path: /components/tabs
 ---
 
