--- a/packages/docs/src/content/foundations/iconography/index.mdx
+++ b/packages/docs/src/content/foundations/iconography/index.mdx
@@ -1,7 +1,8 @@
 ---
 title: Iconography
 description: Icons, their usage and guidance for creating new custom icons
-type: foundations
+section: foundations
+template: component
 path: /foundations/iconography
 ---
 
