--- a/packages/docs/src/content/foundations/layout/index.mdx
+++ b/packages/docs/src/content/foundations/layout/index.mdx
@@ -1,7 +1,8 @@
 ---
 title: Grid & layout
 description: Use containers, grids and whitespace to build a structure and hierarchy on the page.
-type: foundations
+section: foundations
+template: component
 path: /foundations/grid-and-layout
 ---
 
