--- a/packages/docs/src/content/foundations/typography/index.mdx
+++ b/packages/docs/src/content/foundations/typography/index.mdx
@@ -1,7 +1,8 @@
 ---
 title: Typography
 description: Headings, paragraphs, featured text, quotations, lists, links
-type: foundations
+section: foundations
+template: component
 path: /foundations/typography
 ---
 
