MDX imports working

--- a/packages/docs/src/content/about/getting-started.mdx
+++ b/packages/docs/src/content/about/getting-started.mdx
@@ -1,8 +1,9 @@
 ---
 title: Getting started
 description: Guides to getting started using NICE Design System
-type: about
+section: about
 path: /about/getting-started
+template: generalSidenav
 headerCTA:
   href: https://codepen.io/pen?template=mKvYJO
   text: Try it on CodePen
