--- a/packages/docs/src/content/about/roadmap.mdx
+++ b/packages/docs/src/content/about/roadmap.mdx
@@ -1,8 +1,9 @@
 ---
 title: Roadmap
 description: Where we're taking the product
-type: about
+section: about
 path: /about/roadmap
+template: generalSidenav
 ---
 
 We've split our roadmap into short, medium and long term and by components, content, code and build. This is subject to change and will be updated on a regular basis.
@@ -11,9 +12,9 @@ We've split our roadmap into short, medium and long term and by components, cont
 
 ## Short term
 
-<div class="grid">
+<div className="grid">
 	<div data-g="12 xs:6 sm:4 md:3">
-		<h3 class="h5">Components</h3>
+		<h3 className="h5">Components</h3>
 		<ul>
 			<li>
 				<s>Typography</s>
@@ -36,7 +37,7 @@ We've split our roadmap into short, medium and long term and by components, cont
 		</ul>
 	</div>
 	<div data-g="12 xs:6 sm:4 md:3">
-		<h3 class="h5">Content</h3>
+		<h3 className="h5">Content</h3>
 		<ul>
 			<li>
 				<s>Colour documentation</s>
@@ -51,7 +52,7 @@ We've split our roadmap into short, medium and long term and by components, cont
 		</ul>
 	</div>
 	<div data-g="12 xs:6 sm:4 md:3">
-		<h3 class="h5">Code</h3>
+		<h3 className="h5">Code</h3>
 		<ul>
 			<li>
 				<s>SASS Doc generation</s>
@@ -65,7 +66,7 @@ We've split our roadmap into short, medium and long term and by components, cont
 		</ul>
 	</div>
 	<div data-g="12 xs:6 sm:4 md:3">
-		<h3 class="h5">Build</h3>
+		<h3 className="h5">Build</h3>
 		<ul>
 			<li>
 				<s>Grunt build process</s>
@@ -85,9 +86,9 @@ We've split our roadmap into short, medium and long term and by components, cont
 
 ## Medium term
 
-<div class="grid">
+<div className="grid">
 	<div data-g="12 xs:6 sm:4 md:3">
-		<h3 class="h5">Components</h3>
+		<h3 className="h5">Components</h3>
 		<ul>
 			<li>Button loading states</li>
 			<li>Tables</li>
@@ -100,7 +101,7 @@ We've split our roadmap into short, medium and long term and by components, cont
 		</ul>
 	</div>
 	<div data-g="12 xs:6 sm:4 md:3">
-		<h3 class="h5">Content</h3>
+		<h3 className="h5">Content</h3>
 		<ul>
 			<li>Page layout examples/templates</li>
 			<li>JavaScript &amp; ES6 coding standards</li>
@@ -118,7 +119,7 @@ We've split our roadmap into short, medium and long term and by components, cont
 		</ul>
 	</div>
 	<div data-g="12 xs:6 sm:4 md:3">
-		<h3 class="h5">Code</h3>
+		<h3 className="h5">Code</h3>
 		<ul>
 			<li>Transition/animation guidelines</li>
 			<li>GTM &amp; GA implementation</li>
@@ -132,7 +133,7 @@ We've split our roadmap into short, medium and long term and by components, cont
 		</ul>
 	</div>
 	<div data-g="12 xs:6 sm:4 md:3">
-		<h3 class="h5">Build</h3>
+		<h3 className="h5">Build</h3>
 		<ul>
 			<li>
 				NPM Scripts (option to use{" "}
@@ -155,9 +156,9 @@ We've split our roadmap into short, medium and long term and by components, cont
 
 ## Longer term
 
-<div class="grid">
+<div className="grid">
 	<div data-g="12 xs:6 sm:4 md:3">
-		<h3 class="h5">Components</h3>
+		<h3 className="h5">Components</h3>
 		<ul>
 			<li>Page hero</li>
 			<li>Ajax loaders</li>
@@ -166,7 +167,7 @@ We've split our roadmap into short, medium and long term and by components, cont
 		</ul>
 	</div>
 	<div data-g="12 xs:6 sm:4 md:3">
-		<h3 class="h5">Content</h3>
+		<h3 className="h5">Content</h3>
 		<ul>
 			<li>General development principles</li>
 			<li>
@@ -182,7 +183,7 @@ We've split our roadmap into short, medium and long term and by components, cont
 		</ul>
 	</div>
 	<div data-g="12 xs:6 sm:4 md:3">
-		<h3 class="h5">Code</h3>
+		<h3 className="h5">Code</h3>
 		<ul>
 			<li>
 				<a
@@ -198,7 +199,7 @@ We've split our roadmap into short, medium and long term and by components, cont
 		</ul>
 	</div>
 	<div data-g="12 xs:6 sm:4 md:3">
-		<h3 class="h5">Build</h3>
+		<h3 className="h5">Build</h3>
 		<ul>
 			<li>Live site</li>
 			<li>Yeoman generator</li>
