Considerable prune of structure

--- a/packages/docs/src/content/foundations/index.mdx
+++ b/packages/docs/src/content/foundations/index.mdx
@@ -1,7 +1,7 @@
 ---
 title: Foundations
-lead: The foundations and patterns that are to be used for faster product development.
-overview: foundations
-path: /foundations
+description: The foundations and patterns that are to be used for faster product development.
+section: foundations
+
 template: overview
 ---
