--- a/packages/docs/src/content/technical/sass-css/index.mdx
+++ b/packages/docs/src/content/technical/sass-css/index.mdx
@@ -1,9 +1,16 @@
 ---
 title: SASS & CSS
 description: SASS documentation (mixins, functions, variables, selectors) and code style guide
-section: technical
-path: /technical/sass-css
+section: sass-css
+
 template: overview
 ---
 
+We use SASS as our CSS pre-processor as it’s mature, got a great feature set and libsass is super quick.
 
+<blockquote className="quote">
+    <p>Sass is the most mature, stable, and powerful professional grade CSS extension language in the world.</p>
+    <footer>
+        - <cite><a href="http://sass-lang.com/" target="_blank" rel="noopener external">sass-lang.com</a></cite>
+    </footer>
+</blockquote>
