--- a/packages/docs/src/content/technical/sass-css/libraries.mdx
+++ b/packages/docs/src/content/technical/sass-css/libraries.mdx
@@ -1,8 +1,6 @@
 ---
 title: Libraries
 description: The third party libraries we use within our SASS
-section: technical
-path: /technical/sass-css/libraries
+section: sass-css
+
 ---
-
-
