--- a/packages/docs/src/content/technical/sass-css/sass-documentation.mdx
+++ b/packages/docs/src/content/technical/sass-css/sass-documentation.mdx
@@ -1,8 +1,8 @@
 ---
 title: SASS documentation
 description: Auto-generated SASS documentation from our SASSDoc comments
-section: technical
-path: /technical/sass-css/sass-documentation
+section: sass-css
+
 ---
 
 Auto-generated SASS documentation
