--- a/packages/docs/src/content/technical/index.mdx
+++ b/packages/docs/src/content/technical/index.mdx
@@ -1,22 +1,7 @@
 ---
 title: Technical
-lead: Technical documentation and code style guides for creating NICE digital services
+description: Technical documentation and code style guides for creating NICE digital services
 section: technical
-path: /technical
+
 template: overview
 ---
-
-import { Grid, GridItem } from "@nice-digital/nds-grid";
-import { TowerNavigation } from "../../components/partials/TowerNavigation";
-
-<Grid gutter="loose">
-    <GridItem cols={6}>
-        <TowerNavigation
-            section={"technical"}
-            hasRootLink={true}
-        />
-    </GridItem>
-    <GridItem cols={6}>
-        Right
-    </GridItem>
-</Grid>
