--- a/packages/docs/src/content/technical/sass-css/sass-installation.mdx
+++ b/packages/docs/src/content/technical/sass-css/sass-installation.mdx
@@ -1,8 +1,6 @@
 ---
 title: SASS installation
 description: How to install the NICE Design System SASS
-section: technical
-path: /technical/sass-css/sass-installation
+section: sass-css
+
 ---
-
-
