Reset to use auto generated slug

--- a/packages/docs/src/content/about/index.mdx
+++ b/packages/docs/src/content/about/index.mdx
@@ -1,6 +1,6 @@
 ---
 title: About the NICE Design System
-navTitle: About
+navigationLabel: About
 description: NICE Design System is a set of reusable patterns, documentation and guidelines for rapid product development.
 template: detail
 sort: 1
