--- a/packages/docs/src/content/about/getting-started.mdx
+++ b/packages/docs/src/content/about/getting-started.mdx
@@ -2,7 +2,7 @@
 title: Getting started
 description: Guides to getting started using NICE Design System
 template: detail
-sort: 2
+order: 2
 ---
 
 {{ site.product_name }} is the source for creating consistent, accessible and trustworthy services for NICE. It’s aimed at developers, designers and content editors. Please use our relevant guides below to get started:
