--- a/packages/docs/src/content/about/index.mdx
+++ b/packages/docs/src/content/about/index.mdx
@@ -3,7 +3,7 @@ title: About the NICE Design System
 navigationLabel: About
 description: NICE Design System is a set of reusable patterns, documentation and guidelines for rapid product development.
 template: detail
-sort: 1
+order: 1
 ---
 
 Its goal is to create a consistent, accessible digital experience across all of NICE's services.
