--- a/packages/docs/src/content/components/index.mdx
+++ b/packages/docs/src/content/components/index.mdx
@@ -2,5 +2,8 @@
 title: Components
 description: Once you've mastered the foundations, these components are further patterns for building user interfaces.
 template: overview
-sort: 1
+order: 1
 ---
+
+
+
