--- a/packages/docs/src/content/technical/index.mdx
+++ b/packages/docs/src/content/technical/index.mdx
@@ -2,5 +2,5 @@
 title: Technical
 description: Technical documentation and code style guides for creating NICE digital services
 template: overview
-sort: 1
+order: -1
 ---
