--- a/packages/docs/src/content/technical/sass-css/index.mdx
+++ b/packages/docs/src/content/technical/sass-css/index.mdx
@@ -2,6 +2,7 @@
 title: SASS & CSS
 description: SASS documentation (mixins, functions, variables, selectors) and code style guide
 template: overview
+order: 1
 ---
 
 We use SASS as our CSS pre-processor as it’s mature, got a great feature set and libsass is super quick.
