--- a/packages/docs/src/content/technical/sass-css/sass-documentation.mdx
+++ b/packages/docs/src/content/technical/sass-css/sass-documentation.mdx
@@ -2,7 +2,7 @@
 title: SASS documentation
 description: Auto-generated SASS documentation from our SASSDoc comments
 template: detail
-sort: 3
+order: 3
 ---
 
 Auto-generated SASS documentation
