--- a/packages/docs/src/content/about/roadmap.mdx
+++ b/packages/docs/src/content/about/roadmap.mdx
@@ -2,7 +2,7 @@
 title: Roadmap
 description: Where we're taking the product
 template: detail
-sort: 3
+order: 3
 ---
 
 We've split our roadmap into short, medium and long term and by components, content, code and build. This is subject to change and will be updated on a regular basis.
