--- a/packages/docs/src/content/foundations/index.mdx
+++ b/packages/docs/src/content/foundations/index.mdx
@@ -2,5 +2,8 @@
 title: Foundations
 description: The foundations and patterns that are to be used for faster product development.
 template: overview
-sort: 1
+order: 1
 ---
+
+
+
