NDS-114 Additional typing and eslint typescript plugin

--- a/packages/docs/src/content/components/action-banner/index.mdx
+++ b/packages/docs/src/content/components/action-banner/index.mdx
@@ -1,11 +1,11 @@
 ---
 title: Action banner
 description: Banner for highlighting, and giving context to, a call-to-action
-inpagenav: true
+inpagenav: false
 template: detail
 ---
 
-Import { ActionBanner } from "@nice-digital/nds-action-banner"
+import { ActionBanner } from "@nice-digital/nds-action-banner"
 
 ## Why?
 
@@ -21,6 +21,10 @@ Action banners fill the available horizontal space and have their own built-in c
 - follow the rules for <a href="{{ site.baseurl }}{% link foundations/buttons.md %}">buttons</a>.
 
 ## Variants
+
+<ActionBanner title="Alert!">
+    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias aspernatur autem blanditiis commodi cupiditate eius et exercitationem itaque nemo, nulla numquam obcaecati odit placeat quibusdam quos repellat ullam vitae voluptatum.
+</ActionBanner>
 
 ### Default
 
