Add stub for the patterns section

--- a/packages/docs/src/content/components/in-page-nav/index.mdx
+++ b/packages/docs/src/content/components/in-page-nav/index.mdx
@@ -1,5 +1,6 @@
 ---
-title: In page nav
+title: In-page navigation
+navigationLabel: In-page nav
 description: Allows users to navigate to specific sections, within long pages of content, across any screen size.
 
 template: detail
