--- a/packages/docs/src/content/components/action-banner/index.mdx
+++ b/packages/docs/src/content/components/action-banner/index.mdx
@@ -2,6 +2,7 @@
 title: Action banner
 description: Banner for highlighting, and giving context to, a call-to-action
 inpagenav: false
+inpagenav: true
 template: detail
 ---
 
