NDS-124 Add storybook and npm frontmatter

--- a/packages/docs/src/content/components/action-banner/index.mdx
+++ b/packages/docs/src/content/components/action-banner/index.mdx
@@ -1,8 +1,9 @@
 ---
 title: Action banner
 description: Banner for highlighting, and giving context to, a call-to-action
-inpagenav: false
 inpagenav: true
+storybook: action-banner--default
+npm: nds-action-banner
 template: detail
 ---
 
