NDS-127 Update prev-next readme

--- a/packages/docs/src/content/components/previous-next/index.mdx
+++ b/packages/docs/src/content/components/previous-next/index.mdx
@@ -4,11 +4,12 @@ navigationLabel: Previous & Next
 description: A way for users to navigate to previous or next pages in a sequence of content.
 inpagenav: true
 template: detail
+storybook: ?path=/story/components-previous-next
 ---
 
 import { PrevNext } from "@nice-digital/nds-prev-next"
 
-<div class="panel panel--default pb--0">
+<div className="panel panel--default pb--0">
 <PrevNext
 	nextPageLink={{
 		text: "Page Header",
