NDS-124 Consistent storybook links

--- a/packages/docs/src/content/components/action-banner/index.mdx
+++ b/packages/docs/src/content/components/action-banner/index.mdx
@@ -2,7 +2,7 @@
 title: Action banner
 description: Banner for highlighting, and giving context to, a call-to-action
 inpagenav: true
-storybook: action-banner--default
+storybook: components-action-banner
 npm: nds-action-banner
 template: detail
 ---
