--- a/packages/docs/src/content/components/horizontal-navigation/index.mdx
+++ b/packages/docs/src/content/components/horizontal-navigation/index.mdx
@@ -2,7 +2,7 @@
 title: Horizontal navigation
 description: A navigation menu to navigate to different high level pages or sections
 template: detail
-storybook: ?path=/story/components-horizontal-nav
+storybook: components-horizontal-nav
 inpagenav: true
 ---
 
