--- a/packages/docs/src/content/components/previous-next/index.mdx
+++ b/packages/docs/src/content/components/previous-next/index.mdx
@@ -4,7 +4,7 @@ navigationLabel: Previous & Next
 description: A way for users to navigate to previous or next pages in a sequence of content.
 inpagenav: true
 template: detail
-storybook: ?path=/story/components-previous-next
+storybook: components-previous-next
 ---
 
 import { PrevNext } from "@nice-digital/nds-prev-next"
