--- a/packages/docs/src/content/foundations/table/index.mdx
+++ b/packages/docs/src/content/foundations/table/index.mdx
@@ -3,7 +3,7 @@ title: Tables
 description: Basic table styling
 template: detail
 inpagenav: true
-storybook: /storybook/?path=/story/foundations-table
+storybook: foundations-table
 ---
 
 import { Table } from "@nice-digital/nds-table";
