NDS-138 Callout component

--- a/packages/docs/src/content/components/callout/index.mdx
+++ b/packages/docs/src/content/components/callout/index.mdx
@@ -6,3 +6,10 @@ storybook: components-callout
 npm: nds-callout
 template: detail
 ---
+
+## TODO: Callout docs
+
+## Developer Notes
+
+- The image will always be clipped at 16:9 ratio.
+- Always appear at 100% if not in a grid.
